<?xml version="1.0"?>
<package format="3">
  <name>ros_whill</name>
  <version>0.0.0</version>
  <description>The ros_whill package</description>
  <maintainer email="shirai@whill.jp">Shirai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>serial</depend>
  <depend>message_runtime</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>livox_dedistortion_pkg</exec_depend>
  <export>
  </export>
</package>
