<?xml version="1.0"?>
<package format="3">
  <name>ros_whill</name>
  <version>0.0.0</version>
  <description>The ros_whill package</description>
  <maintainer email="shirai@whill.jp">Shirai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>serial</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>car_maneuver_recovery</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <export>
  </export>
</package>
